Add google search bar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div>
         <h1 id="welcome-string"></h1>
     </div>
+    <input id="search-bar" type="text" autofocus placeholder="Search..." autocomplete="off">
     <div id="content">
         <!--Filled in by script.js-->
     </div>
